--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Rune Renovate
+      - name: Run Renovate
         uses: renovatebot/github-action@v46.1.2
         with:
           configurationFile: renovate.json
