--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "zod": "3.20.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.6",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@types/jest": "29.2.0",
     "@types/node": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
@@ -26,6 +31,7 @@
     "husky": "8.0.0",
     "jest": "29.2.0",
     "prettier": "2.7.0",
+    "semantic-release": "^24.2.9",
     "ts-jest": "29.0.0",
     "typescript": "4.9.5"
   }
